src/main/yaml/openunison-deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: openunison
spec:
  strategy:
    type: Rolling
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  test: false
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: openunison
        serviceName: openunison
    spec:
      volumes:
        - name: secret-volume
          secret:
            secretName: openunison-secrets
      containers:
        - resources:
          image: mlbiamdemos/openshift_openunison_commons:latest
          name: openunison
          volumeMounts:
              # name must match the volume name below
              - name: secret-volume
                mountPath: /etc/openunison
                readOnly: true
          livenessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 120
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - '/usr/bin/curl --insecure https://127.0.0.1:8443/check_alive 2>/dev/null | grep Anonymous || exit 1'
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
