src/main/yaml/openunison-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openunison
spec:
  selector:
    serviceName: openunison
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
    name: secure
